Refactor: Optimized portfolio orchestrator, pruned dead code, and simplified rebalance logic as per design.md